# powerCaldera

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  TEMPLATE_SCHEMA.md  config.example.yaml  pyproject.toml
.claude/: settings.local.json
powercaldera/: __init__.py  __main__.py  app.py  app.tcss  config.py  logging.py  utils.py
powercaldera/api/: client.py  models.py
powercaldera/screens/: abilities.py  adversaries.py  base.py  dashboard.py  operations.py  templates_screen.py
powercaldera/templates/: loader.py  models.py
powercaldera/templates/builtin/: apt_lateral_movement.json  credential_harvesting.json  data_exfiltration.json  discovery_recon.json  initial_access_persistence.json  ransomware_simulation.json
powercaldera/widgets/: header_bar.py  status_bar.py
tests/: conftest.py  test_client.py  test_config.py  test_models.py  test_templates.py
todo/: BACKLOG.md  PRD-v1.0-beta.md
